--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "mcmc": "node -r esm mcmc.js",
     "abTesting": "node -r esm abTesting.js",
+    "vaccineEfficiency": "node -r esm vaccineEfficiency.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
