--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@stdlib/stdlib": "0.0.93",
-    "esm": "^3.2.25"
+    "@stdlib/plot": "^0.0.6",
+    "@stdlib/random": "^0.0.12",
+    "@stdlib/stats": "^0.0.13",
+    "esm": "^3.2.25",
+    "jstat": "^1.9.4",
+    "nodeplotlib": "^0.7.6"
   }
 }
