--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mcmc": "node -r esm mcmc.js",
     "abTesting": "node -r esm abTesting.js",
     "vaccineEfficiency": "node -r esm vaccineEfficiency.js",
+    "testBayesJS": "node -r esm testBayesJS.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
